# ampelmann

./: .gitignore  Makefile  README.md  pyproject.toml
assets/: index.html  style.css
examples/: config.toml.example
examples/checks/: certbot.toml  disk-full.toml  disk-space.toml  dmesg.toml  journal-errors.toml  nvme.toml  security-audit.toml  smart.toml  system-health.toml  systemd-failed.toml
examples/sudoers.d/: ampelmann
src/ampelmann/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  db.py  llm.py  logging.py  models.py  notify.py  retry.py  runner.py  scheduler.py
systemd/: ampelmann.service  ampelmann.timer
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_db.py  test_llm.py  test_models.py  test_notify.py  test_runner.py  test_scheduler.py
