[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ampelmann"
version = "0.1.0"
description = "LLM-powered system alert filter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Markus Koskinen"}
]
keywords = ["monitoring", "llm", "alerts", "system-administration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "croniter>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-watch>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
]

[project.scripts]
ampelmann = "ampelmann.cli:main"

[project.urls]
Homepage = "https://github.com/mkoskinen/ampelmann"
Repository = "https://github.com/mkoskinen/ampelmann"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring Ollama/network",
]
addopts = "-ra -q"
